--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@supabase/supabase-js": "^2.38.2",
     "framer-motion": "^10.16.4",
     "next": "^13.2.4",
