--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
+    "react-parallax-tilt": "^1.7.172",
     "react-router-dom": "^6.2.1",
     "typewriter-effect": "^2.21.0"
   },
