--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@supabase/supabase-js": "^2.38.4",
+    "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.16.4",
     "next": "^13.2.4",
     "react": "^18.2.0",
