--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.172",
     "react-router-dom": "^6.2.1",
+    "react-toastify": "^9.1.3",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
